Projet_GL/src/test/deca/context/valid/unprovided/cast_float_to_int.deca
// Test du cast float to int
// Resultat attendu: 12
//OK

{
    float a = 12.43;
    int b = (int) (a);
    print(b);
}
