Projet_GL/src/test/deca/context/invalid/unprovided/variableUndef.deca
{
	int a = 3;
	float b = 4.3;
	int c;
	// d non defini
	c = a + d;
}
